--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "Chess",
   "version": "0.0.1",
   "private": true,
+  "main": "src/App.js",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
     "chess.js": "github:jhlywa/chess.js",
-    "react": "15.4.1",
-    "react-native": "0.42.3",
+    "expo": "17.0.0",
+    "react": "16.0.0-alpha.6",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-17.0.0.tar.gz",
     "react-native-modalbox": "1.3.9",
     "react-native-segmented-control-tab": "^3.0.2",
     "react-native-share": "^1.0.20",
